--- a/custom/index.html
+++ b/custom/index.html
@@ -2,22 +2,24 @@
 <html>
 
 <head>
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+    <!--<script src="../../webcomponentsjs/webcomponents-lite.js"></script>-->
     <script src="./index.js"></script>
     <link rel="stylesheet" href="./custom.css" type="text/css">
     <script>
         /*
-              window.Polymer = window.Polymer || {};
-              window.Polymer.dom = 'shadow';
-              */
+                      window.Polymer = window.Polymer || {};
+                      window.Polymer.dom = 'shadow';
+                      */
     </script>
     <link rel="import" href="form-element.html">
 </head>
 
 <body>
-    <form-element id="myElement"  full-name="the bear" user='{ "firstname": "michael", "lastname": "berezin", "age" :33 }' isbaron></form-element>
+    <form-element id="myElement" full-name="the baron" user='{ "firstname": "michael", "lastname": "berezin", "age" :33 }' isbaron></form-element>
     <br/>
     <button type="button" onclick="doclick();">Click me</button>
+    <br/>
+    <span>The message: </span> <span id="mesagespan"></span>
 </body>
 
 </html>
